--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "rocketFlashCards",
-    "slug": "rocketFlashCards",
+    "name": "FlashCards",
+    "slug": "FlashCards",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
